fixed user name in header spacing

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -29,14 +29,15 @@
   flex-direction: column;
   width: 100%;
   vertical-align: center;
-  font-size: 14px;
+  font-size: 16px;
   text-align: center;
   justify-items: center;
 }
 
 .Header_nav.Login, 
 .Header_nav.Signup,
-.Header_nav.Logout{
+.Header_nav.Logout,
+.Header_nav.User{
   line-height: 2em;
 }
 
@@ -45,13 +46,19 @@
 .Logout,
 .User {
   margin: 0;
-  /* margin-bottom: 10px; */
+  margin-bottom: 10px;
   padding: 10px auto;
 }
 
 .Logout,
 .User {
   margin-top: 10px;
+}
+
+.User {
+  letter-spacing: 0.05em;
+  color: #00A1CF;
+  margin-bottom: 0;
 }
 
 
@@ -96,7 +103,7 @@
   .Header_nav > a,
   .User,
   .Logout {
-    margin-right: 20px;
+    margin-right: 30px;
     margin-bottom: 0px;
     width: fit-content;
     height: fit-content;
@@ -112,7 +119,7 @@
     cursor: pointer;
   }
 
-  .Header_nav.User {
-    margin-right: 30px;
+  .Header_nav.User{
+    margin-right: 20px;
   }
 }
