--- a/src/components/RegistrationForm/RegistrationForm.css
+++ b/src/components/RegistrationForm/RegistrationForm.css
@@ -76,7 +76,7 @@ fieldset > div {
 
 .Registration_footer > a {
   text-decoration: none;
-  color: #00A1CF;
+  color: #0080A5;
   opacity: 80%;
 }
 
