--- a/src/routes/DashboardRoute/DashboardRoute.css
+++ b/src/routes/DashboardRoute/DashboardRoute.css
@@ -6,7 +6,7 @@
 }
 
 .Dashboard_header{
-  margin-top: 30px;
+  margin-top: 10px;
   font-size: 26px;
   padding: 20px;
 }
